# zipup

./: Cargo.toml  README.md  justfile
src/: files.rs  logger.rs  main.rs  parser.rs  zipup.rs
test/: backup_2020-09-20_20:17:58.tar  zipup.conf
