[package]
name = "zipup"
version = "0.1.0"
authors = ["Data-Niklas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4"
colored = "2.0.0"
clap = "3.0.0-beta.1"
anyhow = "1.0"
dirs = "3.0"
chrono = "0.4"
tempfile = "3.1.0"